Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/implicitThis/NewBeforeOuterConstructed2.out
NewBeforeOuterConstructed2.java:20:35: compiler.err.cant.ref.before.ctor.called: this
1 error
